--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,7 @@
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
     <string name="interstitial_ad_unit_id">ca-app-pub-7054645612060561/8999884335</string>
+    <string name="auth_failed">Failed to register ! sorry</string>
 
 
 </resources>
